--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-<link href="neptune/public/application/zfwf_app_sg_start/css/app.css" type="text/css" rel="stylesheet" />
+<link href="neptune/public/application/zfwf_app_sg_login/css/app.css" type="text/css" rel="stylesheet" />
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0-rc.1/jquery.mobile-1.2.0-rc.1.min.css" />
 <script src="http://code.jquery.com/jquery-1.8.1.min.js"></script>
 <script src="http://code.jquery.com/mobile/1.2.0-rc.1/jquery.mobile-1.2.0-rc.1.min.js"></script>
@@ -10,157 +10,18 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="viewport" content="user-scalable=0;"/>
 
-<title>Startside</title>
+<script type="text/javascript" charset="utf-8">
+
+$( document ).bind( "mobileinit", function() {
+    $.mobile.allowCrossDomainPages = true;
+    $.support.cors = true;
+    $.mobile.pushStateEnabled = false;
+});
+
+</script>
+<title>Innlogging</title>
 </head>
-<body ><div data-role="page" data-theme="b" id="mainPage" style="overflow:hidden;"><section id="myMenu" style="z-index:0;visibility:hidden;position:absolute;min-height:100%;height:100%;float:left;"><script>
-$('div:jqmData(role="page")').on('pageshow', function(event, ui) {
-	
-	// Remove previous page from DOM.
-	$(ui.prevPage).remove();
-	
-	// Set swipe sensitivity.
-	$.event.special.swipe.horizontalDistanceThreshold = 50;
-	
-	// Set menu speed.
-	var menuspeed = 0.2;
-
-	// Declare IDs.
-	var menuID = '#' + $(this).children().attr('id');
-	var pageID = '#' + $(this).children().next().attr('id');
-	
-	// Declare height variables.
-	var mypageheight = $(pageID).height();
-	var windowheight = $(window).height();
-	var maxheight = Math.max(windowheight, mypageheight);
-	
-	// Set initial menuStatus variable.
-	menuStatus = false;
-
-	// Load menu in background.	
-	$(menuID).css('visibility', 'visible');
-
-	// Adjust initial myPage height.	
-	if (mypageheight < windowheight) {	
-		// Check if footer exists.
-		if ($('#myFooter').length > 0) {
-			$(pageID).height(windowheight-51);
-		} else {
-			$(pageID).height(windowheight);
-		}
-		$(pageID).trigger('updatelayout');
-	}
-	
-	// Adjust initial myMenu height.
-	$(menuID).height(maxheight);
-	
-	// Adjust myPage/myMenu height on device orientation change.
-	$(window).off('orientationchange').on('orientationchange resize', function(event) {
-		// Declare new height variables.
-		var windowheight = $(window).height();
-		var maxheight = Math.max(windowheight, mypageheight);
-		// Adjust myPage height.
-		if (mypageheight < windowheight) {
-			$(pageID).height(windowheight);
-			$(pageID).trigger('updatelayout');
-		} else {
-			$(pageID).height(mypageheight);
-			$(pageID).trigger('updatelayout');
-		}
-		// Adjust myMenu height.
-		$(menuID).height(maxheight);
-	});
-
-	// Function: Page animation.
-	function pageposition(position) {
-		$(pageID).css({
-			WebkitTransition: 'all ' + menuspeed + 's ease',
-			MozTransition: 'all ' + menuspeed + 's ease',
-			MsTransition: 'all ' + menuspeed + 's ease',
-			OTransition: 'all ' + menuspeed + 's ease',
-			transition: 'all ' + menuspeed + 's ease',
-			WebkitTransform: 'translate(' + position + ', 0)',
-			MozTransform: 'translate(' + position + ', 0)',
-			MsTransform: 'translate(' + position + ', 0)',
-			OTransform: 'translate(' + position + ', 0)',
-			transform: 'translate(' + position + ', 0)'
-		});
-	}
-
-	// Function: Display and hide myMenu.
-	function myMenu(attribute) {
-		if (attribute == 'show') {
-			$('#menuGlow').removeClass('glowoutslow').addClass('glowin');
-			$('a.toggleMenu').removeClass('inactiveMenu').addClass('activeMenu');
-			if ($(menuID).not(':visible')) $(menuID).show();
-			pageposition('165px');
-			menuStatus = true;
-			return false;
-		} else if (attribute == 'hide') {
-			$('a.toggleMenu').removeClass('activeMenu').addClass('inactiveMenu');
-			pageposition('0');
-			menuStatus = false;
-			return false;
-		}
-	}
-
-	// Toggle myMenu on click.
-	$('a.toggleMenu').off('click').on('click', function(event) {
-		if (menuStatus != true) {
-			myMenu('show');
-		} else {
-			$('#menuGlow').addClass('glowoutslow').removeClass('glowin');
-			myMenu('hide');
-		}
-	});
-
-	// Toggle myMenu on swipe.
-	$(pageID).off('swipeleft swiperight').on('swipeleft swiperight', function(event) {
-		event.preventDefault();
-		if (event.type == 'swiperight') {
-			if (!menuStatus) myMenu('show');
-		} else if (event.type == 'swipeleft') {
-			if (menuStatus) {
-				$('#menuGlow').addClass('glowoutslow').removeClass('glowin');
-				myMenu('hide');
-			}
-		}
-	});
-	
-	// myMenu list item click action.
-	$('a.contentLink').off('click').on('click', function(event) {
-		// Declare list element and link variables.
-		var p = $(this).parent();
-		var myhref = $(this).attr('href');
-		var mydatarel = $(this).attr('data-rel');
-		var mytransition = $(this).attr('data-transition');
-		var mydirection = $(this).attr('data-direction');
-		if ( mydirection == "reverse") {
-			myreverse = true;
-		} else {
-			myreverse = false;
-		}
-		
-		// Trigger .changePage if data-rel is not set to popup.
-		if (mydatarel != 'popup') {
-			event.preventDefault();
-			if ($(p).hasClass('active')) {
-				return false;
-			} else {
-				$('#menuGlow').addClass('glowoutfast').removeClass('glowin');
-				myMenu('hide');
-				$(menuID).hide('fast', function () {
-					$.mobile.changePage(myhref, {
-						transition: mytransition,
-						reverse: myreverse
-					});
-				});
-				return false;
-			}
-		}	
-	});
-
-});</script><div data-role="content" id="menu" style="height:100%;margin:0;min-height:100%;overflow:hidden;padding:0;width:165px;"><div id="menuHeader" class="menuHeader" style="border-bottom:solid #333 1px;border-top:solid #333 1px;box-shadow:0 1px 0 #727272;height:50px;padding-left:10px;"><h3 id="headerTitle" style="background:transparent;color:#fff;font-family:arial;font-size:12px;margin-bottom:0;margin-left:0;margin-right:0;margin-top:18px;text-shadow:0px 1px 1px #000;">Hovedmeny</h3></div><div id="menuList" style="padding:0;min-width:inherit;height:inherit; overflow-y: auto;  -webkit-overflow-scrolling: touch;"><ul style="width:inherit;padding-top:0;padding-right:0;padding-left:0;padding-bottom:52px;margin:0;"><li class="active" style="list-style-type:none;margin:0;padding:0;"><a id="Home" class="contentLink" data-direction="reverse" data-transition="none" href="zfwf_app_sg_start.html">Hjem</a></li><li style="list-style-type:none;margin:0;padding:0;"><a id="newExpense" class="contentLink" data-direction="reverse" data-transition="none" href="zfwf_app_sg_inbox.html">Ny reiseregning</a></li><li style="padding:0;margin:0;list-style-type:none;"><a id="viewExpense" class="contentLink" data-direction="reverse" data-transition="none" href="zfwf_app_sg_inbox.html">Vis reiseregninger</a></li><li style="list-style-type:none;margin:0;padding:0;"><a id="Inbox" class="contentLink" data-direction="reverse" data-prefetch="true" data-transition="none" href="zfwf_app_sg_inbox.html">Vis innboks</a></li><li style="list-style-type:none;margin:0;padding:0;"><a id="LogOut" class="contentLink" href="#confirmLogout" data-rel="popup">Logg ut</a></li></ul></div></div><div data-overlay-theme="a" data-theme="c" id="confirmLogout" data-role="popup" data-position-to="window" data-transition="flip" style="overflow:hidden;width:260px;"><header id="popupHeader" class="popupHeader" data-theme="a" style="padding:5px;margin-top:-22px;height:40px;"><h5 id="popupTitle" style="color:#fff;text-align:center;text-shadow:1px 1px #000;">Vennligst bekreft</h5></header><div id="popupContent" class="myPage"><h5 id="popupDescription" style="font-weight:normal;margin:0;padding:10px;">Er du sikker på at du ønsker å logge ut?
-</h5><div id="logoutOptions" class="ui-grid-a" style="margin:auto;padding-bottom:10px;padding-left:5px;padding-right:5px;padding-top:10px;"><div id="Cancel" class="ui-block-a"><a id="cancelLogout" data-corners="false" data-mini="true" data-rel="back" data-role="button" data-theme="c" href="#" style="border-radius:5px;font-variant:small-caps;">Avbryt</a></div><div id="Logout" class="ui-block-b"><a id="doLogout" data-corners="false" data-mini="true" data-rel="back" data-role="button" data-theme="b" href="#" style="border-radius:5px;font-variant:small-caps;">Logg ut</a></div></div></div></div></section><section class="myPage" id="myPage" style="box-shadow:-2px 1px 10px 0px #2c2c2;height:100%;min-height:100%;position:relative;z-index:999;"><section id="Header"><header data-role="header" data-tap-toggle="false" data-theme="a" id="myHeader" style="height:50px;position:relative;"><h3 id="headerTitle" style="font-size:14px;margin-bottom:0;margin-left:0;margin-right:0;margin-top:16px;"></h3><a id="Menu" class="toggleMenu" data-role="none" href="#" style="background-image:url('./neptune/public/application/zfwf_app_sg_start/images/menu.png');background-position:left;background-repeat:no-repeat;height:32px;margin-left:10px;margin-top:7px;width:100px;"><img class="glow" id="menuGlow" src="neptune/public/application/zfwf_app_sg_start/images/glow.png" style="margin-top:-16px;margin-left:-16px;"/></a></header><div id="breadcrumbs" style="width:100%;position:relative;margin-bottom:20px;height:34px;background:#fff;"><div id="contentWrapper" style="background:transparent;height:100%;overflow:hidden;position:absolute;width:100%;z-index:3;"><h5 id="breadcrumbsTitle" style="text-shadow:1px 1px #fff;text-indent:30px;margin-top:10px;margin-right:0;margin-left:0;margin-bottom:0;font-weight:bold;font-size:12px;">Startside</h5></div><div id="breadcrumbsShadow" style="z-index:0;width:90%;position:absolute;opacity:.6;left:5%;height:30px;clip:rect(30px,3000px,3000px,0px);box-shadow:0 0 20px 5px rgba(0, 0, 0, .35);bottom:0;border-radius:0 0 100% 100% / 0 0 150% 150%;"></div><div style="
+<body ><div data-role="page" data-theme="b" id="mainPage" style="background:-webkit-linear-gradient(top, rgba(243,243,243,1) 0%,rgba(255,255,255,1) 100%);overflow:hidden;"><section id="myPage" style="box-shadow:-2px 1px 10px 0px #2c2c2;height:100%;min-height:100%;position:relative;z-index:999;"><section id="Header"><header data-role="header" data-tap-toggle="false" data-theme="a" id="myHeader" style="height:50px;position:relative;"><h3 id="headerTitle" style="font-size:14px;margin-bottom:0;margin-left:0;margin-right:0;margin-top:16px;"></h3></header><div id="breadcrumbs" style="width:100%;position:relative;margin-bottom:20px;height:34px;background:#fff;"><div id="contentWrapper" style="background:transparent;height:100%;overflow:hidden;position:absolute;width:100%;z-index:3;"><h5 id="breadcrumbsTitle" style="text-shadow:1px 1px #fff;text-indent:30px;margin-top:10px;margin-right:0;margin-left:0;margin-bottom:0;font-weight:bold;font-size:12px;">Logg inn</h5></div><div id="breadcrumbsShadow" style="z-index:0;width:90%;position:absolute;opacity:.6;left:5%;height:30px;clip:rect(30px,3000px,3000px,0px);box-shadow:0 0 20px 5px rgba(0, 0, 0, .35);bottom:0;border-radius:0 0 100% 100% / 0 0 150% 150%;"></div><div style="
 
     position: absolute;
     width: 100%;
@@ -189,4 +50,42 @@ $('div:jqmData(role="page")').on('pageshow', function(event, ui) {
     #dfdfdf 14%,#ededed 17%,#f7f7f7 32%,#f7f7f7 85%,#f8f8f8 86%,#ffffff 88%,#ffffff 100%);
 
 "></div>
-</div></section><section id="Content" style="overflow:hidden;"><div id="pageIntro" style="height:100px;margin-left:10px;margin-right:10px;overflow:hidden;position:relative;"><img id="logoHTML5" alt="HTML5" height="80" src="neptune/server/images/html5.png" width="80" style="margin-top:10px;margin-right:auto;margin-left:auto;display:block;"/></div><section id="myFrame" style="padding-right:10px;padding-left:10px;padding-bottom:30px;overflow:hidden;margin-top:10px;background:transparent;"><div id="frameWrapper" style="margin:auto;position:relative;z-index:900;"><div id="frameContent" style="z-index:1;width:100%;top:0;position:relative;padding-top:10px;padding-bottom:10px;min-height:20px;height:100%;border:1px solid #ddd;background:#fff;"><div id="mainMenu" style="padding-left:10px;padding-right:10px;"><ul data-role="listview" data-theme="c"><li data-icon="arrow-r" data-icon="false" style="border:1px solid #e1e1e1;height:52px;margin-bottom:10px;padding:0;"><a id="newExpense_main" data-transition="none" href="zfwf_app_sg_inbox.html"><h5 id="Title" style="text-shadow:none;padding:0;margin:0;font-size:12px;">Ny reiseregning</h5><h6 id="Description" style="font-size:11px;font-weight:normal;margin:0;padding:0;text-shadow:none;">Opprett reiseregning</h6></a></li><li data-icon="arrow-r" data-icon="false" style="border:1px solid #e1e1e1;height:52px;margin-bottom:10px;"><a id="viewExpense_main" data-transition="none" href="zfwf_app_sg_inbox.html"><h5 id="Title" style="font-size:12px;margin:0;text-shadow:none;">Vis reiseregninger</h5><h6 id="Description" style="font-size:11px;font-weight:normal;margin:0;text-shadow:none;">Vis tidligere reiseregninger</h6></a></li><li data-icon="arrow-r" data-icon="false" style="height:52px;border:1px solid #e1e1e1;"><a id="Inbox_main" data-transition="none" href="zfwf_app_sg_inbox.html"><h5 id="Title" style="font-size:12px;margin:0;text-shadow:none;">Vis innboks</h5><h6 id="Description" style="font-size:11px;font-weight:normal;margin:0;text-shadow:none;">Ingen elementer</h6></a></li></ul></div></div><div id="frameShadow" class="shadow" style="border-radius:50px;bottom:0;box-shadow:0px 5px 2px rgba(0, 0, 0, 0.2);height:60px;position:absolute;width:100%;z-index:0;"></div></div></section></section></section></div></body></html>
+</div></section><section id="Content" style="overflow:hidden;"><section id="myFrame" style="padding-right:10px;padding-left:10px;padding-bottom:30px;overflow:hidden;margin-top:10px;background:transparent;"><div id="frameWrapper" style="margin:auto;position:relative;z-index:900;"><div id="frameContent" style="z-index:1;width:100%;top:0;position:relative;padding-top:10px;padding-bottom:20px;min-height:20px;height:100%;border:1px solid #ddd;background:#fff;"><section id="myForm" style="margin-left:10px;margin-right:10px;"><form method="post" name="loginForm" action="http://neptune.solidgroup.no/neptune/native/zfwf_app_sg_start.html" data-transition="none" id="myForm"><script>
+$(document).bind("pageinit", function(){
+
+$(".labeldiv").click(function() {
+var currentID = this.id;
+var parent = this.parentNode.id;
+var children = document.getElementById(parent).getElementsByTagName("input");
+var selectChildren = document.getElementById(parent).getElementsByTagName("select");
+if(children.length == 1) {
+	if (document.getElementById(children[0].id).type == 'text') {
+		document.getElementById(children[0].id).focus();
+	} else if (document.getElementById(children[0].id).type == 'checkbox' ) {
+		if (document.getElementById(children[0].id).checked == false) {
+			document.getElementById(children[0].id).checked = true;
+		} else {
+			document.getElementById(children[0].id).checked = false;
+		}
+	} else if (document.getElementById(children[0].id).type == 'date'
+			|| document.getElementById(children[0].id).type == 'time'
+|| document.getElementById(children[0].id).type == 'datetime'
+			|| document.getElementById(children[0].id).type == 'number'
+			|| document.getElementById(children[0].id).type == 'email'
+			|| document.getElementById(children[0].id).type == 'month'
+			|| document.getElementById(children[0].id).type == 'week'
+                                                || document.getElementById(children[0].id).type == 'tel'
+                                                || document.getElementById(children[0].id).type == 'password') {
+				document.getElementById(children[0].id).focus();
+	} else if(document.getElementById(children[0].id).type == 'radio') {
+		if (document.getElementById(children[0].id).checked == false) {
+			document.getElementById(children[0].id).checked = true;
+		}
+	}
+} else if(selectChildren.length == 1) {
+	document.getElementById(selectChildren[0].id).focus();
+}
+});
+
+});
+</script><div id="inputUsername" style="position:relative;padding-top:10px;padding-bottom:10px;overflow:hidden;margin:0;border-bottom:1px solid #f1f1f1;background:transparent;"><div id="usernameLabel" class="labeldiv" style="background:transparent;float:left;margin:0;width:40%;"><h5 id="usernameTitle" style="font-size:14px;font-weight:bold;margin-bottom:3px;margin-left:0;margin-right:0;margin-top:3px;text-shadow:none;">Brukernavn</h5></div><div id="usernameFieldcontain" style="width:60%;position:relative;margin:0;float:right;background:transparent;"><input name="sap-user" id="sap-user" autocomplete="off" data-role="none" type="text" style="width:100%;text-align:right;padding:0;outline:none;margin:0;font-size:14px;box-shadow:none;border-radius:0;border:0;background:transparent;" value=""/></div></div><div id="inputPassword" style="position:relative;padding-top:10px;padding-bottom:10px;overflow:hidden;margin:0;border-bottom:1px solid #f1f1f1;background:transparent;"><div id="passwordLabel" class="labeldiv" style="background:transparent;float:left;margin:0;width:40%;"><h5 id="passwordTitle" style="text-shadow:none;margin-top:3px;margin-right:0;margin-left:0;margin-bottom:3px;font-weight:bold;font-size:14px;">Passord</h5></div><div id="passwordFieldcontain" style="background:transparent;float:right;margin:0;position:relative;width:60%;"><input name="sap-password" id="sap-password" autocomplete="off" data-role="none" type="password" style="background:transparent;border:0;border-radius:0;box-shadow:none;font-size:14px;margin:0;outline:none;padding:0;text-align:right;width:100%;" value=""/></div></div><input name="sap-sessioncmd" id="sap-sessioncmd" data-theme="d" type="text" style="display:none;" value="open"/><div id="formSubmit" hidden="true"><button data-role="button" data-theme="c" id="hiddenSubmit" type="submit" > Logg inn </button></div><input type="hidden" name="applid" value="ZFWF_APP_SG_LOGIN"></form></section></div><div id="frameShadow" class="shadow" style="border-radius:50px;bottom:0;box-shadow:0px 5px 2px rgba(0, 0, 0, 0.2);height:60px;position:absolute;width:100%;z-index:0;"></div></div></section><a id="loginLink" data-corners="false" data-mini="true" data-role="button" data-theme="a" onClick="document.getElementById('hiddenSubmit').click();" style="border-radius:5px;margin-left:11px;margin-right:11px;margin-top:20px;">Logg inn</a></section></section></div></body></html>
